--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.5.0",
     "elastic-apm-node": "^3.41.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "helmet": "^6.0.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
@@ -53,9 +53,12 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.1",
     "mongoose-timestamp-plugin": "^0.0.1",
+    "multer": "^1.4.5-lts.2",
     "node-vault": "^0.9.22",
+    "openai": "^4.96.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "uuid": "^11.1.0"
   }
 }
