--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
+    "@google-cloud/speech": "^7.1.0",
+    "@google-cloud/video-transcoder": "^4.0.1",
     "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -46,6 +48,7 @@
     "dotenv": "^16.0.3",
     "elastic-apm-node": "^3.41.0",
     "express": "^4.18.2",
+    "fs-extra": "^11.3.0",
     "helmet": "^6.0.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
@@ -56,6 +59,7 @@
     "node-vault": "^0.9.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "string-similarity": "^4.0.4"
   }
 }
