--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
-    "axios": "^1.2.1",
+    "@google-cloud/vision": "^5.2.0",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "elastic-apm-node": "^3.41.0",
     "express": "^4.18.2",
+    "google-auth-library": "^10.1.0",
     "helmet": "^6.0.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
@@ -53,9 +56,11 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.1",
     "mongoose-timestamp-plugin": "^0.0.1",
+    "multer": "^2.0.1",
     "node-vault": "^0.9.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "sharp": "^0.34.2"
   }
 }
