--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
-    "axios": "^1.2.1",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -53,9 +53,11 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.1",
     "mongoose-timestamp-plugin": "^0.0.1",
+    "multer": "^2.0.1",
     "node-vault": "^0.9.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "sharp": "^0.34.2"
   }
 }
