--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.0.3",
     "elastic-apm-node": "^3.41.0",
     "express": "^4.18.2",
+    "google-auth-library": "^10.1.0",
     "helmet": "^6.0.1",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
