--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.5.0",
+    "@google-cloud/storage": "^7.16.0",
     "@google-cloud/vision": "^5.2.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.10.0",
